<resources>
    <string name="app_name">VideoPlayer</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="size">Size</string>
    <string name="sort_by">Sort by</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="rename">Rename</string>
    <string name="title">Title</string>
    <string name="path">Path</string>
    <string name="_1_00gb">1.00Gb</string>
    <string name="duration">Duration</string>
    <string name="_00_00_00">00_00_00</string>
    <string name="resolution">Resolution</string>
    <string name="text_wth_bullets">•</string>
    <string name="size_in_b">%1$.2f B</string>
    <string name="size_in_kb">%1$.2f KB</string>
    <string name="size_in_mb">%1$.2f MB</string>
    <string name="size_in_gb">%1$.2f GB</string>
    <string name="version">Version</string>
    <string name="_1_0_1">1.01</string>
    <string name="folder_name">Folder Name</string>
    <string name="_10_videos">"10 "</string>
    <string name="long_text">Long Text</string>
    <string name="lock">Lock</string>
    <string name="audio_sub">Audio &amp; Subtitle</string>
    <string name="rotate">Rotate</string>
    <string name="unlock_controls">Unlock Controls?</string>
    <string name="screen_locked">Screen Locked</string>
    <string name="tap_to_unlock">Tap to Unlock</string>
    <string name="_1x">1x</string>
    <string name="speed_0_5x">0.5x</string>
    <string name="speed_0_75x">0.75x</string>
    <string name="speed_1x">1x</string>
    <string name="speed_1_25x">1.25x</string>
    <string name="speed_1_5x">1.5x</string>
    <string name="speed_1_75x">1.75x</string>
    <string name="speed_2x">2x</string>
    <string name="skip_previous">skip_previous</string>
    <string name="pausebutton">pauseButton</string>
    <string name="skipnext">skipNext</string>
    <string name="full_screen">full_screen</string>

</resources>