<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/radio_speedGroup"
        android:layout_width="300dp"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/slow_speed_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/speed_0_5x" />

        <RadioButton
            android:id="@+id/slow_speed_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/speed_0_75x" />

        <RadioButton
            android:id="@+id/speed_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_1x" />

        <RadioButton
            android:id="@+id/fast_speed_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/speed_1_25x" />

        <RadioButton
            android:id="@+id/fast_speed_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/speed_1_5x" />
        <RadioButton
            android:id="@+id/fast_speed_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/speed_2x" />
    </RadioGroup>
</LinearLayout>
