<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:layout_marginLeft="3dp"
    android:layout_marginRight="3dp"
    android:orientation="horizontal"
    android:theme="@style/MyRipple">

    <CheckBox
        android:id="@+id/video_folder_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="0"
        app:cardBackgroundColor="@color/light_grey"
        app:cardCornerRadius="5dp">

        <ImageView
            android:id="@+id/video_thumbnail"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/logo" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/video_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="start"
            android:maxLines="3"
            android:text="@string/long_text"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/video_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:maxLines="1"
                android:text="@string/_00_00_00"
                android:textColor="@color/light_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:background="@android:color/transparent"
                android:text="@string/text_wth_bullets"
                android:textColor="@color/light_white" />

            <TextView
                android:id="@+id/video_resolution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:maxLines="1"
                android:text="720p"
                android:textColor="@color/light_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:background="@android:color/transparent"
                android:maxLength="6"
                android:text="@string/text_wth_bullets"
                android:textColor="@color/light_white" />

            <TextView
                android:id="@+id/video_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:maxLength="9"
                android:maxLines="1"
                android:text="@string/_1_00gb"
                android:textColor="@color/light_white" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/_file_menu_more"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_weight="0"
        android:src="@drawable/more"
        android:theme="@style/MyRipple"
        android:visibility="visible" />
</LinearLayout>
