<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/videoView_one_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/videoView_go_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="0"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_keyboard_backspace_24" />

        <TextView
            android:id="@+id/videoView_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/long_text"
            android:textColor="@color/white" />

        <ImageButton
            android:id="@+id/videoView_more"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="0"
            android:background="@android:color/transparent"
            android:src="@drawable/more" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/videoView_two_layout"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/videoView_four_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/videoView_one_layout">

        <ImageView
            android:id="@+id/videoView_brightness_image"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginBottom="7dp"
            android:layout_weight="0"
            android:src="@drawable/netflix_brightness_four" />

        <SeekBar
            android:id="@+id/videoView_brightness"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="-50dp"
            android:layout_weight="1"
            android:max="255"
            android:progress="150"
            android:progressBackgroundTint="@color/white"
            android:progressTint="@color/red"
            android:rotation="270"
            android:scaleY="3"
            android:thumb="@null" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/videoView_four_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <LinearLayout
            android:id="@+id/videoView_four_two_child_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="11dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="start"
            >
            <ImageView
                android:id="@+id/videoView_rotation"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_rotation"
                />
            <ImageView
                android:id="@+id/videoView_lock_screen"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/netflix_unlock"
                android:background="@android:color/transparent"
                android:layout_marginTop="20dp"
                android:layout_marginStart="3dp"
                />
                    <ImageView
                        android:id="@+id/videoView_share_screen"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/share"
                        android:background="@android:color/transparent"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="3dp"
                        />

        </LinearLayout>
            <LinearLayout
                android:id="@+id/speed_and_floatingLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_weight="1"
                android:gravity="end|center_vertical"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="11dp"
                android:orientation="vertical"
                >
                <ImageButton
                    android:id="@+id/floating_window"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/floating_window"
                    android:background="@android:color/transparent"
                    />
                <TextView
                    android:id="@+id/speedBtn"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:text="@string/_1x"
                    android:textSize="10sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:background="@drawable/speed_background"
                    android:layout_marginTop="20dp"
                    />

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/videoView_four_one_child_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <SeekBar
                android:id="@+id/videoView_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:progress="50"
                android:progressBackgroundTint="@color/white"
                android:progressTint="@color/red"
                android:thumb="@drawable/custom_thumb" />

            <TextView
                android:id="@+id/videoView_endtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/_00_00_00"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/videoView_three_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:visibility="visible"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/volume_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_volume" />

            <ImageButton
                android:id="@+id/videoView_rewind"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_rewind" />

            <ImageButton
                android:id="@+id/skip_previous"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_skipprevious"
                android:background="@android:color/transparent"
                />
            <ImageButton
                android:id="@+id/videoView_play_pause_btn"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:background="@android:color/transparent"
                android:src="@drawable/netflix_pause_button" />


            <ImageButton
                android:id="@+id/skip_next"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_skipnext"
                android:background="@android:color/transparent"
                />

            <ImageButton
                android:id="@+id/videoView_forward"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_forward" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </LinearLayout>

<!--        <LinearLayout-->
<!--            android:id="@+id/videoView_four_two_child_layout"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal"-->
<!--            android:padding="8dp">-->

<!--            <LinearLayout-->
<!--                android:id="@+id/videoView_lock_screen"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center"-->
<!--                android:layout_weight="1"-->
<!--                android:gravity="center"-->
<!--                android:orientation="horizontal"-->
<!--                android:padding="10dp"-->
<!--                android:theme="@style/MyRipple">-->

<!--                <ImageView-->
<!--                    android:layout_width="20dp"-->
<!--                    android:layout_height="20dp"-->
<!--                    android:layout_marginEnd="8dp"-->
<!--                    android:layout_marginRight="5dp"-->
<!--                    android:background="@android:color/transparent"-->
<!--                    android:src="@drawable/netflix_unlock" />-->

<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:background="@android:color/transparent"-->
<!--                    android:text="@string/lock"-->
<!--                    android:textColor="@color/white"-->
<!--                    android:textSize="12sp" />-->
<!--            </LinearLayout>-->

<!--            <LinearLayout-->
<!--                android:id="@+id/videoView_track"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center"-->
<!--                android:layout_weight="1"-->
<!--                android:gravity="center"-->
<!--                android:orientation="horizontal"-->
<!--                android:padding="10dp"-->
<!--                android:theme="@style/MyRipple">-->

<!--                <ImageView-->
<!--                    android:layout_width="20dp"-->
<!--                    android:layout_height="20dp"-->
<!--                    android:layout_marginEnd="8dp"-->
<!--                    android:layout_marginRight="5dp"-->
<!--                    android:background="@android:color/transparent"-->
<!--                    android:src="@drawable/netflix_audio_subtitles" />-->

<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:background="@android:color/transparent"-->
<!--                    android:text="@string/audio_sub"-->
<!--                    android:textColor="@color/white"-->
<!--                    android:textSize="12sp" />-->
<!--            </LinearLayout>-->

<!--            <LinearLayout-->
<!--                android:id="@+id/videoView_rotation"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center"-->
<!--                android:layout_weight="1"-->
<!--                android:gravity="center"-->
<!--                android:orientation="horizontal"-->
<!--                android:padding="10dp"-->
<!--                android:theme="@style/MyRipple">-->

<!--                <ImageView-->
<!--                    android:layout_width="20dp"-->
<!--                    android:layout_height="20dp"-->
<!--                    android:layout_marginEnd="8dp"-->
<!--                    android:layout_marginRight="5dp"-->
<!--                    android:background="@android:color/transparent"-->
<!--                    android:src="@drawable/ic_rotation" />-->

<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:background="@android:color/transparent"-->
<!--                    android:text="@string/rotate"-->
<!--                    android:textColor="@color/white"-->
<!--                    android:textSize="12sp" />-->
<!--            </LinearLayout>-->
<!--        </LinearLayout>-->
    </LinearLayout>

    <LinearLayout
        android:id="@+id/video_five_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center_vertical|center_horizontal|center"
        android:orientation="vertical"
        android:padding="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/video_five_child_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/white_round"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="14dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:src="@drawable/netflix_lock_black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unlock_controls"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/videoView_lock_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/screen_locked"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/videoView_lock_text_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap_to_unlock"
            android:textColor="@color/light_white"
            android:textSize="10sp" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
